--- a/.env-example
+++ b/.env-example
@@ -6,14 +6,14 @@
 # ----------------------------------------------- #
 
 # Get your key here: https://platform.openai.com/account/api-keys
-OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+OPENAI_API_KEY=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
 
 # HuggingFace API Token https://huggingface.co/settings/tokens
 HUGGINGFACE_API_TOKEN=hf_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # In case you run into ratelimit on a single organization token, you might setting up multiple API keys here
 # Example:
-# OPENAI_API_KEYS=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx,sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# OPENAI_API_KEYS=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,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
 
 # GPT Model (default: gpt-3.5-turbo)
 OPENAI_GPT_MODEL=
@@ -26,7 +26,7 @@ MAX_MODEL_TOKENS=2000
 PRE_PROMPT=
 
 # Whether or not to use prefixes !gpt and !dalle
-PREFIX_ENABLED=true
+PREFIX_ENABLED=false
 
 # Whether or not to use prefixes for self-note conversation
 PREFIX_SKIPPED_FOR_ME=true
